added security check using SpEL on respository, and finished testing for the new V2 service